--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
-  background-color: #810c35;
+  background-color: #e14984;
 }
 
 code {
